# Media-server

./: LICENSE  ReadMe.md
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  app_settings.json
server/src/: main.rs  state.rs
server/src/chat/: mod.rs
server/src/global_mods/: construct_message.rs  mod.rs  serialize_json_msg.rs
server/src/media/: codecs.rs  media_struct.rs  mod.rs
server/src/media/app_data/: app_traits.rs  media_service.rs  mod.rs  router.rs  transport.rs  worker.rs
server/src/media_manager/: mod.rs
server/src/room/: message.rs  mod.rs
server/src/room/dto/: internal.dto.rs  mod.rs
server/src/room/dto/args/: consume.dto.rs  mod.rs  produce.dto.rs  room.dto.rs
server/src/room/dto/request/: broadcast_message.dto.rs  connect_consumer_transport.dto.rs  connect_producer_transport.dto.rs  consumer_close.dto.rs  consumer_pause.dto.rs  (+8 more)
server/src/room/handlers/: chat.rs  mod.rs  save.rs  user.rs
server/src/server/: message.rs  mod.rs
server/src/server/handlers/: close_inactive.handler.rs  creation_room.handler.rs  join_room.handler.rs  media_events.handler.rs  media_worker.handler.rs  mod.rs
server/src/session/: client_msg.rs  internal_msg.rs  mod.rs  room_actor_msg.rs  socket_json_msg.rs
server/src/session/dto/: mod.rs
server/src/session/handlers/: chat.rs  error.rs  media.rs  mod.rs  response.rs  stream.rs  user.rs
server/src/user/: mod.rs
server/src/user/impl/: mod.rs  user.consumer.rs  user.debug.rs  user.disconnect.rs  user.producer.rs  user.rs  user.transport.rs
server/ssl/: cert.pem  key.pem
(+130 files in other folders)
