[package]
name = "voice_chat"
version = "0.1.0"
authors = ["Vladislav Trubachev", "Mojtaba Motevali", "Vitali Kolebyanov""]
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = { version = "4" }
actix-web-actors = "4"
app_infrastructure = { git = "https://github.com/kolebynov/app_infrastructure.git", features = [
    "app_tracing",
] }
async-rwlock = "1.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
mediasoup = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4" }
tracing = "0.1"