[package]
name = "mediasoup"
version = "0.1.0"
authors = ["mojtaba"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-rwlock = "1.3.0"
mediasoup = "0.11.4"
rand = "0.8.3"
actix-web = { version = "3.3.2" }
actix-web-actors = "3"
actix="0.10.0"
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"